{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 186,
  "lineage": "537ebe22-f4c4-f3b4-062d-bfd62f531edd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051b62f02448b8820",
            "domain": "vpc",
            "id": "eipalloc-051b62f02448b8820",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-9-253-90.us-west-1.compute.amazonaws.com",
            "public_ip": "52.9.253.90",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4d9ed95865f3b40",
            "arn": "arn:aws:ec2:us-west-1:641924405444:instance/i-07b2c4338e51baca4",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b2c4338e51baca4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e5cdbe5c59471cbc",
            "private_dns": "ip-10-0-3-127.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a96f6cb5d4a53d36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092c0860605536978",
            "tags": {
              "Name": "dev-web-server"
            },
            "tags_all": {
              "Name": "dev-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d6a37bbb77ef1f04"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.ssh-http-sg",
            "aws_subnet.private_subnet_01",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_gy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:641924405444:internet-gateway/igw-0ee0f1631ea355a70",
            "id": "igw-0ee0f1631ea355a70",
            "owner_id": "641924405444",
            "tags": {
              "Name": "dev-gateway"
            },
            "tags_all": {
              "Name": "dev-gateway"
            },
            "vpc_id": "vpc-0f4f97629fccf9ebb"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051b62f02448b8820",
            "connectivity_type": "public",
            "id": "nat-023cfbb1dbec601fd",
            "network_interface_id": "eni-0ca9381c596ab5fe1",
            "private_ip": "10.0.3.200",
            "public_ip": "52.9.253.90",
            "subnet_id": "subnet-092c0860605536978",
            "tags": {
              "Name": "dev-nat"
            },
            "tags_all": {
              "Name": "dev-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.private_subnet_01",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:641924405444:route-table/rtb-0a9544ea23f496cc1",
            "id": "rtb-0a9544ea23f496cc1",
            "owner_id": "641924405444",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-023cfbb1dbec601fd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private_route_table"
            },
            "tags_all": {
              "Name": "dev-private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4f97629fccf9ebb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.private_subnet_01",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:641924405444:route-table/rtb-0e48c8d37ada76303",
            "id": "rtb-0e48c8d37ada76303",
            "owner_id": "641924405444",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee0f1631ea355a70",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public_route_table"
            },
            "tags_all": {
              "Name": "dev-public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4f97629fccf9ebb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_gy",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098dcbff98b277da4",
            "route_table_id": "rtb-0a9544ea23f496cc1",
            "subnet_id": "subnet-092c0860605536978"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.my_private_route_table",
            "aws_subnet.private_subnet_01",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0112548f8b6cf98bb",
            "route_table_id": "rtb-0e48c8d37ada76303",
            "subnet_id": "subnet-01e64c237867638a3"
          },
          "dependencies": [
            "aws_internet_gateway.my_gy",
            "aws_route_table.my_public_route_table",
            "aws_subnet.public_subnet_01",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ECS-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:641924405444:security-group/sg-048241382855a26b2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-048241382855a26b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-067c23233e9ba52c8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220827232816052600000003",
            "name_prefix": "terraform-",
            "owner_id": "641924405444",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-ECS-sg"
            },
            "tags_all": {
              "Name": "dev-ECS-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4f97629fccf9ebb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.LoadBalancer-sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LoadBalancer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:641924405444:security-group/sg-067c23233e9ba52c8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-067c23233e9ba52c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220827232811276200000001",
            "name_prefix": "terraform-",
            "owner_id": "641924405444",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-LoadBalancer-sg"
            },
            "tags_all": {
              "Name": "dev-LoadBalancer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4f97629fccf9ebb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-http-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:641924405444:security-group/sg-0d6a37bbb77ef1f04",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6a37bbb77ef1f04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220827232811281400000002",
            "name_prefix": "terraform-",
            "owner_id": "641924405444",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-ssh-http-sg"
            },
            "tags_all": {
              "Name": "dev-ssh-http-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4f97629fccf9ebb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:641924405444:subnet/subnet-092c0860605536978",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092c0860605536978",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641924405444",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private_subnet-01"
            },
            "tags_all": {
              "Name": "dev-private_subnet-01"
            },
            "vpc_id": "vpc-0f4f97629fccf9ebb"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:641924405444:subnet/subnet-0a2106aae6a34c9d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2106aae6a34c9d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "641924405444",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private_subnet-02"
            },
            "tags_all": {
              "Name": "dev-private_subnet-02"
            },
            "vpc_id": "vpc-0f4f97629fccf9ebb"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:641924405444:subnet/subnet-01e64c237867638a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e64c237867638a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "641924405444",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public_subnet-01"
            },
            "tags_all": {
              "Name": "dev-public_subnet-01"
            },
            "vpc_id": "vpc-0f4f97629fccf9ebb"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:641924405444:subnet/subnet-012cbc828cb6a818c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012cbc828cb6a818c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "641924405444",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public_subnet-02"
            },
            "tags_all": {
              "Name": "dev-public_subnet-02"
            },
            "vpc_id": "vpc-0f4f97629fccf9ebb"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:641924405444:vpc/vpc-0f4f97629fccf9ebb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d79b9dfd330c3b4",
            "default_route_table_id": "rtb-090e1e11bd48191f7",
            "default_security_group_id": "sg-0bb8d7319638edb5e",
            "dhcp_options_id": "dopt-0f2f585af1ecc77fd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f4f97629fccf9ebb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090e1e11bd48191f7",
            "owner_id": "641924405444",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}